# OC-Execution-AI-Assistant

./: .gitignore  .replit  chat_history.db  check_logs.py  check_nginx.py  debug_env.py  debug_rag_loaded.py  debug_tools.py  deploy.py  main.py  pyproject.toml  quick_fix.py  replit.md  requirements.txt  seed_rag.py  server_diagnostics.py  test_auth.py  test_rag.txt  verify_agentic_api.py  verify_fix.py
app/: __init__.py  config.py  templates_data.py
app/routes/: auth_routes.py  main_routes.py
app/services/: db_service.py  openai_service.py  rag_service.py
app/tools/: __init__.py  calculator_tool.py  code_execution_tool.py  search_tool.py
app/utils/: device_detection.py  file_processing.py
attached_assets/: Pasted--teyra-theme-css-1-Tokens-root-bg-0-0B0F14-deep-space-bg--1757368062757_1757368062757.txt  Pasted-025-09-09-14-04-36-78-eead25e4-User-127-0-0-1-09-Sep-2025-12-04-36-GET-HTTP-1-1-200--1757420413059_1757420413059.txt  Pasted-You-are-Bob-a-master-level-AI-prompt-optimization-specialist-Your-mission-is-to-transform-any-user-1757362293858_1757362293858.txt  Pasted-You-are-Lyra-a-master-level-AI-prompt-optimization-specialist-Your-mission-is-to-transform-any-use-1757362213687_1757362213688.txt  Pasted-You-are-a-highly-experienced-and-proactive-Software-Architecture-Assistant-specializing-in-modern-so-1753715882234_1753715882235.txt
rag_data/: metadata.json  vector.index
static/: manifest.json  sw.js  teyra-theme.css
static/css/: micro-interactions.css  style.css  style.css.broken  (+1 more)
templates/: admin_documents.html  base.html  dashboard.html  index.html
(+6 files in other folders)
